--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
